# dataset-hub

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add_dataset.md
.github/workflows/: build_docs.yml  cd.yml  ci.yml  docs.yml  lint.yml  pypi.yml  tests.yml
dataset_hub/: __init__.py
dataset_hub/_core/: config_manager.py  data_bundle.py  dataset.py  get_data.py
dataset_hub/_core/configs/classificator/: titanic.yaml
dataset_hub/_core/loaders/: buffer.py  source_loader.py  url_loader.py
dataset_hub/_core/packagers/: buffer_packager.py  table_packager.py
dataset_hub/_core/parsers/: buffer_parser.py
dataset_hub/_core/provider/: dataframe_provider.py  provider.py  provider_factory.py  url_provider.py
dataset_hub/_core/registry/: config.py  load.py  transform.py
dataset_hub/_core/settings/: default_settings.py  user_settings.py
dataset_hub/_core/sources/: download.py  download_utils.py  transform.py
dataset_hub/_core/tables/: dataset.py  load.py  transform.py
dataset_hub/_core/utils/: config.py  logger.py  pandas.py  paths.py
dataset_hub/_settings/: default_settings.py  loader.py  user_settings.py
dataset_hub/classification/: __init__.py  datasets.py
dataset_hub/classification/_configs/: breast_cancer.yaml  iris.yaml  titanic.yaml
dataset_hub/nlp/: __init__.py
dataset_hub/regression/: __init__.py  datasets.py
dataset_hub/regression/_configs/: california_housing.yaml
dataset_hub/timeseries/: __init__.py  datasets.py
dataset_hub/timeseries/_configs/: household_power.yaml
docs/: build.py  conf.py  index.rst  install.rst  quick_start.rst  settings.rst
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/datasets/: index.rst
docs/datasets/classification/: index.rst  iris.rst  titanic.rst
docs/datasets/regression/: california_housing.rst  index.rst
docs/datasets/timeseries/: household_power.rst  index.rst
docs/dev_docs/: env.rst  index.rst  starter.rst
docs/dev_docs/dev_api/: config.rst  get_data.rst  index.rst  settings.rst
docs/dev_docs/dev_api/provider/: dataframe_provider.rst  index.rst  provider.rst  provider_factory.rst  url_provider.rst
docs/developer_api/: index.rst  settings.rst
docs/developer_api/provider/: index.rst  provider_factory.rst
docs/user_api/: index.rst
nlp/: datasets.py
nlp/_configs/: imdb.yaml
notebooks/approach_gallery/timeseries/: prophet_monthly.ipynb
notebooks/classification/: iris.ipynb
notebooks/quick_start/classification/: iris.ipynb  titanic.ipynb
notebooks/quick_start/regression/: california_housing.ipynb
notebooks/quick_start/timeseries/: household_power.ipynb
notebooks/timeseries/: household_power.ipynb
tests/: datasets.py  test_classification_datasets.py
tests/_core/loaders/: test_buffer.py  test_source_loader.py  test_url_loader.py
