[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset_hub"
version = "0.1.1"
description = "A unified API for exploring any ML task"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Slava Bakulin" }
]

dependencies = [
    "pandas>=2.1.4",
    "requests>=2.0.0",
    "PyYAML>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
    "sphinx==5.1.1",
    "sphinx-rtd-theme==1.0.0",
    "myst-parser",
    "sphinxcontrib-bibtex",
    "pytest",
    "types-requests"
]

# -----------------------------
# Formatting: Black
# -----------------------------
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# -----------------------------
# Linting: Ruff
# -----------------------------
[tool.ruff]
line-length = 88
fix = true
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
]

# -----------------------------
# Type Checking: Mypy
# -----------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_subclassing_any = true

exclude = "(^tests/|docs/conf\\.py$)"

plugins = []

[tool.setuptools.package-data]
"dataset_hub" = ["**/*.yaml"]